legacy/differential_testing/gcc_regression/gcc_reg_cb/results/gcc482/save_st/pr69245.c-4.8.2-3.out.txt
pr69245.c:9:9: error: attribute(target("fpu=vfp")) is unknown
 #pragma GCC target "fpu=vfp"
         ^
pr69245.c:12:9: error: attribute(target("fpu=neon-vfpv4")) is unknown
 #pragma GCC target "fpu=neon-vfpv4"
         ^
pr69245.c:16:1: error: attribute(target("fpu=neon-vfpv4")) is unknown
 {
 ^
pr69245.c:22:1: error: attribute(target("fpu=vfp")) is unknown
 {
 ^
